# 3d-pipeline

./: .gitignore  CLAUDE.md  README.md  dlt_secrets.example.toml  main.py  pyproject.toml  rest_api_fakestore.duckdb
dagster_pipeline/: __init__.py  definitions.py  resources.py
dagster_pipeline/assets/: __init__.py  extract.py  transform.py
dbt_project/fakestoreapi/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/fakestoreapi/macros/: test_expression_is_true.sql
dbt_project/fakestoreapi/models/: schema.yml
dbt_project/fakestoreapi/models/marts/: fct_sales.sql  fct_sales.yml  schema.yml
dbt_project/fakestoreapi/models/staging/fakestore/: schema.yml  stg_carts.sql  stg_carts_products.sql  stg_carts_products.yml  stg_products.sql  stg_products.yml  stg_users.sql  stg_users.yml
postgres_db/: docker-compose.yaml
