[project]
name = "3d-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "levi"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dbt-core>=1.9.5,<2.0.0",
    "dbt-duckdb>=1.9.3,<2.0.0",
    "dlt[duckdb,postgres]>=1.11.0,<2.0.0",
    "streamlit>=1.45.1,<2.0.0",
    "dbt-postgres>=1.9.0,<2.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
