[project]
name = "4d-pipeline"
version = "0.1.0"
description = "4D Data Pipeline: dlt -> dbt -> DuckDB -> Dagster"
authors = [
    {name = "levi"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dbt-core>=1.9.5,<2.0.0",
    "dbt-duckdb>=1.9.3,<2.0.0",
    "dlt[duckdb,postgres]>=1.11.0,<2.0.0",
    "streamlit>=1.45.1,<2.0.0",
    "dbt-postgres>=1.9.0,<2.0.0",
    "dagster>=1.9.0,<2.0.0",
    "dagster-webserver>=1.9.0,<2.0.0",
    "dagster-dbt>=0.25.0,<1.0.0",
    "dagster-duckdb>=0.25.0,<1.0.0",
    "dagster-embedded-elt>=0.25.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.dagster]
module_name = "dagster_pipeline"
